git-svn-id: http://svn.geogr.uni-jena.de/svn/jams/trunk@1982 cee23a32-52fb-0310-bcb1-fe94ad5b3aa2